# swarm-compute

./: pyproject.toml  requirements.txt
scripts/: swarm_compute_cli.sh
swarmcompute/: config.py  main.py  test.py
swarmcompute/configs/: base_config.py  selector_config.py  test_config.py
swarmcompute/development/: dev_v0.py  dev_v1.py  test.py
swarmcompute/modules/: cli.py
tests/: test_main.py
